--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <h4>
                 Weight (Kilograms)
             </h4>
-            <input type="text"  name="number" class="W-input-screen" placeholder="75 Kg">
+            <input type="text"  name="number" class="W-input-screen" placeholder="75 Kg" required>
         </div>
         <div class="height">
             <h4>
                 Height (Centimeters)
             </h4>
-            <input type="text" name="number" class="H-input-screen" placeholder="190 cm">
+            <input type="text" name="number" class="H-input-screen" placeholder="190 cm" required>
         </div>
         <div class="buttons">
             <button class="calculate">Calculate</button>
